examples/invalid/extra_tests/redefinitions.cgl
fn main() -> int{
  int a = 5;
  float a = 3.14;
}
